<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    tools:ignore="ExtraText">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registration_title"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/register_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autofillHints="4488"
                android:hint="@string/register_number_hint"
                android:inputType="number"
                android:maxLines="1" />

            <EditText
                android:id="@+id/register_lastname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_step"
                android:autofillHints="4488"
                android:hint="@string/register_lastname_hint"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <EditText
                android:id="@+id/register_firstname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_step"
                android:autofillHints=""
                android:hint="@string/register_firstname_hint"
                android:inputType="textPersonName"
                android:maxLines="1" />
            <!-- style="@style/EditText" -->

            />


            <RadioGroup
                android:id="@+id/register_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/register_boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male">

                </RadioButton>


                <RadioButton
                    android:id="@+id/register_girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

            <EditText
                android:id="@+id/register_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="150dp"
                android:editable="false"
                android:inputType="date"
                android:ems="10"
                android:hint="@string/birthdate" />
            <EditText

                android:id="@+id/register_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_step"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />

            <EditText

                android:id="@+id/register_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_step"
                android:hint="@string/register_username"
                android:inputType="textEmailAddress" />

            <EditText

                android:id="@+id/register_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_step"
                android:hint="@string/register_password"
                android:inputType="textPassword" />

            <EditText

                android:id="@+id/register_password_confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_step"
                android:hint="@string/register_password_confirm"
                android:inputType="textPassword" />
            <Spinner
                android:id="@+id/register_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/register_planning_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="Début" />
            <TextView
                android:id="@+id/register_planning_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="Fin" />

            <!--Button to open the image selector-->
            <Button
                android:id="@+id/register_picture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="@string/register_picture"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
               <!-- android:backgroundTint="" -->


            <!--ImageView to preview the selected image-->
            <ImageView
                android:id="@+id/register_preview_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/register_button"
                style="@style/Button"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/four_step"
                android:text="@string/register_button" />

            <Button
                android:id="@+id/register_reset_button"

                style="@style/Button"

                android:layout_gravity="center"

                android:layout_marginTop="@dimen/four_step"

                android:text="@string/reset_button" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>